--- a/pockets/miniprogram.dialog/proscenium/pages/package.json
+++ b/pockets/miniprogram.dialog/proscenium/pages/package.json
@@ -16,13 +16,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@doraemon-ui/miniprogram.animation-group": "^0.0.1-alpha.1",
-    "@doraemon-ui/miniprogram.backdrop": "^0.0.1-alpha.1",
-    "@doraemon-ui/miniprogram.core-js": "^0.0.2-alpha.6",
     "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.1",
     "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.1",
-    "@doraemon-ui/miniprogram.dialog": "^0.0.1-alpha.0",
-    "@doraemon-ui/miniprogram.popup": "^0.0.1-alpha.1",
-    "@doraemon-ui/style": "^0.0.1-alpha.6"
+    "@doraemon-ui/miniprogram.demo-shared": "^0.0.1-alpha.1",
+    "@doraemon-ui/miniprogram.dialog": "^0.0.1-alpha.1"
   }
 }
