--- a/pockets/miniprogram.dialog/package.json
+++ b/pockets/miniprogram.dialog/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@doraemon-ui/miniprogram.core-js": "^0.0.2-alpha.6",
     "@doraemon-ui/miniprogram.popup": "^0.0.1-alpha.1",
+    "@doraemon-ui/miniprogram.shared": "^0.0.1-alpha.1",
     "@doraemon-ui/style": "^0.0.1-alpha.1"
   },
   "devDependencies": {
