--- a/pockets/miniprogram.toast/package.json
+++ b/pockets/miniprogram.toast/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@doraemon-ui/miniprogram.toast",
   "private": false,
-  "version": "0.0.1-alpha.0",
+  "version": "0.0.1-alpha.1",
   "description": "miniprogram toast component for doraemon-ui",
   "author": "skyvow",
   "homepage": "",
@@ -27,7 +27,7 @@
   "dependencies": {
     "@doraemon-ui/miniprogram.core-js": "^0.0.2-alpha.21",
     "@doraemon-ui/miniprogram.icon": "^0.0.1-alpha.1",
-    "@doraemon-ui/miniprogram.popup": "0.0.1-alpha.2",
+    "@doraemon-ui/miniprogram.popup": "^0.0.1-alpha.3",
     "@doraemon-ui/style": "^0.0.1-alpha.6"
   },
   "devDependencies": {
