--- a/pockets/miniprogram.button/proscenium/pages/package.json
+++ b/pockets/miniprogram.button/proscenium/pages/package.json
@@ -14,7 +14,8 @@
   "author": "skyvow <724355924@qq.com>",
   "license": "MIT",
   "dependencies": {
-    "@doraemon-ui/miniprogram.button": "^0.0.2-alpha.14",
-    "@doraemon-ui/style": "^0.0.1-alpha.5"
+    "@doraemon-ui/miniprogram.button": "^0.0.2-alpha.27",
+    "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.2",
+    "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.2"
   }
 }
