--- a/pockets/miniprogram.animation-group/proscenium/pages/package.json
+++ b/pockets/miniprogram.animation-group/proscenium/pages/package.json
@@ -16,9 +16,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@doraemon-ui/miniprogram.animation-group": "^0.0.1-alpha.0",
-    "@doraemon-ui/miniprogram.core-js": "^0.0.2-alpha.19",
-    "@doraemon-ui/miniprogram.list": "^0.0.2-alpha.23",
-    "@doraemon-ui/style": "^0.0.1-alpha.5"
+    "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.2",
+    "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.2",
+    "@doraemon-ui/miniprogram.animation-group": "^0.0.1-alpha.2"
   }
 }
