--- a/pockets/miniprogram.backdrop/proscenium/pages/package.json
+++ b/pockets/miniprogram.backdrop/proscenium/pages/package.json
@@ -16,6 +16,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@doraemon-ui/miniprogram.backdrop": "^0.0.1-alpha.0"
+    "@doraemon-ui/miniprogram.backdrop": "^0.0.1-alpha.3",
+    "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.2",
+    "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.2"
   }
 }
