--- a/pockets/miniprogram.pagination/proscenium/pages/package.json
+++ b/pockets/miniprogram.pagination/proscenium/pages/package.json
@@ -14,8 +14,9 @@
   "author": "skyvow <724355924@qq.com>",
   "license": "MIT",
   "dependencies": {
-    "@doraemon-ui/miniprogram.pagination": "^0.0.2-alpha.24",
-    "@doraemon-ui/style": "^0.0.1-alpha.5",
-    "@doraemon-ui/miniprogram.button": "^0.0.2-alpha.25"
+    "@doraemon-ui/miniprogram.button": "^0.0.2-alpha.27",
+    "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.2",
+    "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.2",
+    "@doraemon-ui/miniprogram.pagination": "^0.0.2-alpha.24"
   }
 }
