--- a/pockets/miniprogram.backdrop/proscenium/pages/package.json
+++ b/pockets/miniprogram.backdrop/proscenium/pages/package.json
@@ -16,8 +16,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@doraemon-ui/miniprogram.backdrop": "^0.0.1-alpha.3",
-    "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.2",
-    "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.2"
+    "@doraemon-ui/miniprogram.animation-group": "^0.0.1-alpha.3",
+    "@doraemon-ui/miniprogram.core-js": "^0.0.2-alpha.21",
+    "@doraemon-ui/style": "^0.0.1-alpha.7",
+    "@doraemon-ui/miniprogram.backdrop": "^0.0.1-alpha.4",
+    "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.3",
+    "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.3"
   }
 }
