--- a/pockets/miniprogram.toast/package.json
+++ b/pockets/miniprogram.toast/package.json
@@ -28,6 +28,7 @@
     "@doraemon-ui/miniprogram.core-js": "^0.0.2-alpha.21",
     "@doraemon-ui/miniprogram.icon": "^0.0.1-alpha.3",
     "@doraemon-ui/miniprogram.popup": "^0.0.1-alpha.4",
+    "@doraemon-ui/miniprogram.shared": "^0.0.1-alpha.2",
     "@doraemon-ui/style": "^0.0.1-alpha.7"
   },
   "devDependencies": {
