--- a/pockets/miniprogram.animation-group/package.json
+++ b/pockets/miniprogram.animation-group/package.json
@@ -22,7 +22,7 @@
     "build": "dora build",
     "test": "cross-env NODE_ENV=testing jest --coverage",
     "clean": "cross-env rimraf miniprogram_dist/* .coverage-report/*",
-    "preversion": "npm run clean && npm run build && npm run test"
+    "preversion": "pnpm run clean && pnpm run build && pnpm run test"
   },
   "dependencies": {
     "@doraemon-ui/miniprogram.core-js": "^0.0.2-alpha.21",
