--- a/pockets/miniprogram.pagination/package.json
+++ b/pockets/miniprogram.pagination/package.json
@@ -22,9 +22,10 @@
     "build": "dora build",
     "test": "cross-env NODE_ENV=testing jest --coverage",
     "clean": "cross-env rimraf miniprogram_dist/* .coverage-report/*",
-    "preversion": "npm run clean && npm run build && npm run test"
+    "preversion": "pnpm run clean && pnpm run build && pnpm run test"
   },
   "dependencies": {
+    "@doraemon-ui/miniprogram.button": "^0.0.2-alpha.28",
     "@doraemon-ui/miniprogram.core-js": "^0.0.2-alpha.21",
     "@doraemon-ui/style": "^0.0.1-alpha.7"
   },
