--- a/packages/miniprogram.popup/package.json
+++ b/packages/miniprogram.popup/package.json
@@ -28,6 +28,7 @@
     "@doraemon-ui/miniprogram.animation-group": "^0.0.1-alpha.5",
     "@doraemon-ui/miniprogram.backdrop": "^0.0.1-alpha.6",
     "@doraemon-ui/miniprogram.core-js": "^0.0.2-alpha.23",
+    "@doraemon-ui/miniprogram.shared": "^0.0.1-alpha.4",
     "@doraemon-ui/style": "^0.0.1-alpha.9"
   },
   "devDependencies": {
