--- a/demos/miniprogram.demo-shared/package.json
+++ b/demos/miniprogram.demo-shared/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@doraemon-ui/miniprogram.tools": "^0.0.2-alpha.12",
+    "@types/node": "^16.3.3",
     "cross-env": "^7.0.3",
     "jest": "^27.0.6",
     "rimraf": "^3.0.2"
