--- a/packages/miniprogram.accordion/playground/pages/package.json
+++ b/packages/miniprogram.accordion/playground/pages/package.json
@@ -2,7 +2,7 @@
   "name": "miniprogram.accordion",
   "private": false,
   "version": "0.0.1",
-  "description": "miniprogram accordion component for doraemon-ui",
+  "description": "miniprogram accordion component demo for doraemon-ui",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,8 +14,8 @@
   "author": "skyvow <724355924@qq.com>",
   "license": "MIT",
   "dependencies": {
-    "@doraemon-ui/miniprogram.accordion": "0.0.2-alpha.26",
-    "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.2",
-    "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.2"
+    "@doraemon-ui/miniprogram.accordion": "0.0.2-alpha.30",
+    "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.4",
+    "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.4"
   }
 }
