--- a/packages/miniprogram.core-js/package.json
+++ b/packages/miniprogram.core-js/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@doraemon-ui/miniprogram.tools": "^0.0.2-alpha.16",
+    "@types/node": "^16.3.3",
     "cross-env": "^7.0.3",
     "jest": "^27.0.6",
     "rimraf": "^3.0.2"
