--- a/packages/miniprogram.icon/package.json
+++ b/packages/miniprogram.icon/package.json
@@ -28,7 +28,8 @@
     "@doraemon-ui/miniprogram.core-js": "^0.0.2-alpha.24"
   },
   "devDependencies": {
-    "@doraemon-ui/cli": "^0.0.2-alpha.36",
+    "@doraemon-ui/miniprogram.cli": "^0.0.2-alpha.40",
+    "@types/node": "^16.3.3",
     "cross-env": "^7.0.3",
     "jest": "^27.0.6",
     "rimraf": "^3.0.2"
