--- a/packages/miniprogram.popup/playground/pages/package.json
+++ b/packages/miniprogram.popup/playground/pages/package.json
@@ -16,9 +16,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.1",
-    "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.1",
-    "@doraemon-ui/miniprogram.popup": "^0.0.1-alpha.1",
-    "@doraemon-ui/style": "^0.0.1-alpha.6"
+    "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.4",
+    "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.4",
+    "@doraemon-ui/miniprogram.popup": "^0.0.1-alpha.7"
   }
 }
