--- a/packages/style/package.json
+++ b/packages/style/package.json
@@ -20,6 +20,7 @@
     "preversion": "pnpm run clean && pnpm run build && pnpm run test"
   },
   "devDependencies": {
+    "@types/node": "^16.3.3",
     "cross-env": "^7.0.3",
     "jest": "^27.0.6",
     "less": "^4.1.1",
