--- a/packages/miniprogram.safe-area/package.json
+++ b/packages/miniprogram.safe-area/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@doraemon-ui/miniprogram.core-js": "^0.0.2-alpha.6",
-    "@doraemon-ui/miniprogram.shared": "workspace:0.0.1-alpha.5",
+    "@doraemon-ui/miniprogram.shared": "^0.0.1-alpha.5",
     "@doraemon-ui/style": "^0.0.1-alpha.1"
   },
   "devDependencies": {
