--- a/packages/miniprogram.core-js/package.json
+++ b/packages/miniprogram.core-js/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.1",
-    "style-object-to-css-string": "^1.0.1"
+    "style-object-to-css-string": "1.0.1"
   },
   "devDependencies": {
     "@doraemon-ui/miniprogram.tools": "^0.0.2-alpha.16",
