--- a/packages/miniprogram.button/package.json
+++ b/packages/miniprogram.button/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@doraemon-ui/miniprogram.cli": "^0.0.2-alpha.40",
+    "@doraemon-ui/miniprogram.shared": "^0.0.1-alpha.7",
     "@types/node": "^16.3.3",
     "cross-env": "^7.0.3",
     "jest": "^27.0.6",
