--- a/packages/miniprogram.list/package.json
+++ b/packages/miniprogram.list/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@doraemon-ui/miniprogram.core-js": "^0.0.2-alpha.28",
+    "@doraemon-ui/miniprogram.shared": "^0.0.1-alpha.7",
     "@doraemon-ui/style": "^0.0.1-alpha.10"
   },
   "devDependencies": {
