--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "packages": [
       "demos/*",
       "packages/*",
+      "packages/**/playground/**",
       "playground/**"
     ],
     "nohoist": [
