--- a/packages/miniprogram.list/playground/pages/package.json
+++ b/packages/miniprogram.list/playground/pages/package.json
@@ -1,6 +1,6 @@
 {
   "name": "miniprogram.list",
-  "private": false,
+  "private": true,
   "version": "0.0.1",
   "description": "miniprogram list component for doraemon-ui",
   "main": "app.js",
