--- a/packages/miniprogram.animation-group/playground/pages/package.json
+++ b/packages/miniprogram.animation-group/playground/pages/package.json
@@ -1,7 +1,7 @@
 {
   "name": "miniprogram.animation-group",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.0",
   "description": "miniprogram animation-group component demo for doraemon-ui",
   "author": "skyvow",
   "homepage": "",
@@ -16,8 +16,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@doraemon-ui/miniprogram.animation-group": "^0.0.1-alpha.14",
     "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.2",
-    "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.2",
-    "@doraemon-ui/miniprogram.animation-group": "^0.0.1-alpha.2"
+    "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.2"
   }
 }
