--- a/packages/miniprogram.button/playground/pages/package.json
+++ b/packages/miniprogram.button/playground/pages/package.json
@@ -1,7 +1,7 @@
 {
   "name": "miniprogram.button",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.0",
   "description": "miniprogram button component for doraemon-ui",
   "main": "app.js",
   "scripts": {
@@ -14,7 +14,7 @@
   "author": "skyvow <724355924@qq.com>",
   "license": "MIT",
   "dependencies": {
-    "@doraemon-ui/miniprogram.button": "^0.0.2-alpha.27",
+    "@doraemon-ui/miniprogram.button": "^0.0.2-alpha.38",
     "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.2",
     "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.2"
   }
