--- a/packages/miniprogram.dialog/playground/pages/package.json
+++ b/packages/miniprogram.dialog/playground/pages/package.json
@@ -1,7 +1,7 @@
 {
   "name": "miniprogram.dialog",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.0",
   "description": "miniprogram dialog component demo for doraemon-ui",
   "author": "skyvow",
   "homepage": "",
@@ -19,6 +19,6 @@
     "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.10",
     "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.10",
     "@doraemon-ui/miniprogram.demo-shared": "^0.0.1-alpha.2",
-    "@doraemon-ui/miniprogram.dialog": "^0.0.1-alpha.12"
+    "@doraemon-ui/miniprogram.dialog": "^0.0.1-alpha.16"
   }
 }
