--- a/packages/miniprogram.icon/playground/pages/package.json
+++ b/packages/miniprogram.icon/playground/pages/package.json
@@ -1,7 +1,7 @@
 {
   "name": "miniprogram.icon",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.0",
   "description": "miniprogram icon component demo for doraemon-ui",
   "author": "skyvow",
   "homepage": "",
@@ -19,7 +19,7 @@
     "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.2",
     "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.2",
     "@doraemon-ui/miniprogram.demo-shared": "^0.0.1-alpha.1",
-    "@doraemon-ui/miniprogram.icon": "^0.0.1-alpha.0",
+    "@doraemon-ui/miniprogram.icon": "^0.0.1-alpha.13",
     "@doraemon-ui/style": "^0.0.1-alpha.6"
   }
 }
