--- a/packages/miniprogram.list/playground/pages/package.json
+++ b/packages/miniprogram.list/playground/pages/package.json
@@ -1,7 +1,7 @@
 {
   "name": "miniprogram.list",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.0",
   "description": "miniprogram list component for doraemon-ui",
   "main": "app.js",
   "scripts": {
@@ -16,6 +16,6 @@
   "dependencies": {
     "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.10",
     "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.10",
-    "@doraemon-ui/miniprogram.list": "^0.0.2-alpha.34"
+    "@doraemon-ui/miniprogram.list": "^0.0.2-alpha.36"
   }
 }
