--- a/packages/miniprogram.backdrop/playground/pages/package.json
+++ b/packages/miniprogram.backdrop/playground/pages/package.json
@@ -16,11 +16,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@doraemon-ui/miniprogram.animation-group": "^0.0.1-alpha.14",
-    "@doraemon-ui/miniprogram.backdrop": "^0.0.1-alpha.15",
-    "@doraemon-ui/miniprogram.core-js": "^0.0.2-alpha.21",
-    "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.3",
-    "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.3",
-    "@doraemon-ui/style": "^0.0.1-alpha.7"
+    "@doraemon-ui/miniprogram.backdrop": "^0.0.1-alpha.18",
+    "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.12",
+    "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.12"
   }
 }
