--- a/demos/miniprogram.demo-page/package.json
+++ b/demos/miniprogram.demo-page/package.json
@@ -26,11 +26,11 @@
   },
   "dependencies": {
     "@doraemon-ui/miniprogram.core-js": "^0.0.2-alpha.30",
-    "@doraemon-ui/miniprogram.shared": "^:0.0.1-alpha.10",
+    "@doraemon-ui/miniprogram.shared": "^0.0.1-alpha.10",
     "@doraemon-ui/style": "^0.0.1-alpha.10"
   },
   "devDependencies": {
-    "@doraemon-ui/miniprogram.cli": "^0.0.2-alpha.40",
+    "@doraemon-ui/miniprogram.cli": "^0.0.2-alpha.44",
     "@types/node": "^16.3.3",
     "cross-env": "^7.0.3",
     "jest": "^27.0.6",
