--- a/packages/miniprogram.icon/playground/pages/package.json
+++ b/packages/miniprogram.icon/playground/pages/package.json
@@ -16,10 +16,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.2",
-    "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.2",
-    "@doraemon-ui/miniprogram.demo-shared": "^0.0.1-alpha.1",
-    "@doraemon-ui/miniprogram.icon": "^0.0.1-alpha.13",
-    "@doraemon-ui/style": "^0.0.1-alpha.6"
+    "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.13",
+    "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.14",
+    "@doraemon-ui/miniprogram.icon": "^0.0.1-alpha.16"
   }
 }
