--- a/packages/miniprogram.safe-area/playground/project.config.json
+++ b/packages/miniprogram.safe-area/playground/project.config.json
@@ -38,7 +38,8 @@
     "userConfirmedBundleSwitch": false,
     "packNpmManually": false,
     "packNpmRelationList": [],
-    "minifyWXSS": true
+    "minifyWXSS": true,
+    "ignoreUploadUnusedFiles": true
   },
   "compileType": "miniprogram",
   "libVersion": "2.11.3",
