--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lint-staged": "^11.1.2",
     "micromatch": "^4.0.4",
     "miniprogram-api-typings": "^3.12.2",
-    "miniprogram-simulate": "^1.4.2",
+    "miniprogram-simulate": "1.6.1",
     "pnpm": "^7.11.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
