--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "packages": [
       "demos/*",
       "packages/*",
-      "playground/**"
+      "playground/**",
+      "taro-react-playground/**"
     ],
     "nohoist": [
       "**@doraemon-ui/style**"
@@ -14,6 +15,9 @@
   "devDependencies": {
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-class-static-block": "^7.21.0",
+    "@babel/plugin-proposal-decorators": "^7.29.0",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-typescript": "^7.14.5",
     "@types/jest": "^27.0.3",
@@ -57,5 +61,5 @@
       "pre-commit": "pnpm run pre-commit"
     }
   },
-  "packageManager": "pnpm@7.11.0"
+  "packageManager": "pnpm@10.29.3"
 }
