--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-package-lock=false
+# package-lock=false
 puppeteer_download_host = https://npm.taobao.org/mirrors
 shamefully-hoist=true
 strict-peer-dependencies=false
