--- a/playground/miniprogram/pages/package.json
+++ b/playground/miniprogram/pages/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@doraemon-ui/miniprogram",
-  "private": false,
-  "version": "0.0.2-alpha.41",
+  "name": "@doraemon-ui/miniprogra-playground",
+  "private": true,
+  "version": "0.0.1-alpha.0",
   "description": "miniprogram for doraemon-ui",
   "main": "app.js",
   "scripts": {
