--- a/playground/taro-react/package.json
+++ b/playground/taro-react/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "taro-playground",
-  "version": "1.0.0",
+  "name": "@doraemon-ui/taro-react-playground",
+  "version": "0.0.1-alpha.0",
   "private": true,
   "description": "",
   "templateInfo": {
@@ -42,7 +42,7 @@
       "ios >= 8"
     ]
   },
-  "author": "",
+  "author": "skyvow <724355924@qq.com>",
   "dependencies": {
     "@babel/runtime": "^7.24.4",
     "@doraemon-ui/miniprogram.core-js": "0.0.2-alpha.32",
