--- a/playground/taro-react/package.json
+++ b/playground/taro-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@doraemon-ui/taro-react-playground",
-  "version": "0.0.1-alpha.0",
+  "version": "0.0.1-alpha.1",
   "private": true,
   "description": "",
   "templateInfo": {
@@ -45,13 +45,13 @@
   "author": "skyvow <724355924@qq.com>",
   "dependencies": {
     "@babel/runtime": "^7.24.4",
-    "@doraemon-ui/miniprogram.core-js": "0.0.2-alpha.32",
-    "@doraemon-ui/style": "0.0.1-alpha.10",
-    "@doraemon-ui/miniprogram.button": "0.0.2-alpha.43",
-    "@doraemon-ui/miniprogram.shared": "^0.0.1-alpha.12",
-    "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.13",
-    "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.14",
+    "@doraemon-ui/miniprogram.button": "^0.0.2-alpha.44",
+    "@doraemon-ui/miniprogram.core-js": "^0.0.2-alpha.33",
+    "@doraemon-ui/miniprogram.demo-block": "^0.0.1-alpha.16",
+    "@doraemon-ui/miniprogram.demo-page": "^0.0.1-alpha.17",
     "@doraemon-ui/miniprogram.list": "workspace:*",
+    "@doraemon-ui/miniprogram.shared": "^0.0.1-alpha.13",
+    "@doraemon-ui/style": "0.0.1-alpha.10",
     "@doraemon-ui/taro-react": "workspace:*",
     "@tarojs/components": "4.1.11",
     "@tarojs/helper": "4.1.11",
